<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/btnInsertDummyItemStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insert_dummy_item_stock"/>

        <Button
            android:id="@+id/btnInsertDummyItemStockAttributes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insert_dummy_item_stock_attributes"/>

        <Button
            android:id="@+id/btnCountData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count_data" />

        <Button
            android:id="@+id/showShowStockItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/showShowStockItems" />

        <TextView
            android:id="@+id/labelCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/count" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelStockItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_stock_plural" />

            <TextView
                android:id="@+id/labelCountStockItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="150dp"
                android:text="@string/minus_one" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelStockItemAttributes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_stock_attributes" />

            <TextView
                android:id="@+id/labelCountStockItemAttributes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="90dp"
                android:text="@string/minus_one" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/bntClearData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/clear_data" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>